Initial commit for vault handling new file:   postfix-relay/templates/secret-provider-class.yaml modified:   postfix-relay/templates/secret.yaml modified:   postfix-relay/values.yaml

--- a/helm/postfix-relay/values.yaml
+++ b/helm/postfix-relay/values.yaml
@@ -129,6 +129,11 @@ postfixRelay:
   #dkimMilterHost:
   #dkimTrustedHosts:
 
+  csi:
+    enabled: false
+    #provider: vault
+    #address: http://vault.secret-management.svc.cluster.local:8200
+
 nodeSelector: {}
 
 tolerations: []
