--- a/helm/postfix-relay/templates/secret.yaml
+++ b/helm/postfix-relay/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.postfixRelay.csi.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,20 +11,21 @@ metadata:
 type: Opaque
 data:
   POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_PASSWORD: {{ .Values.postfixRelay.defaultOutboundRelay.password | b64enc }}
-{{- if eq (include "postfix.dkimActive" .) "true" }}
-  {{- if and .Values.postfixRelay.defaultOutboundRelay.dkimDomain .Values.postfixRelay.defaultOutboundRelay.dkimSelector .Values.postfixRelay.defaultOutboundRelay.dkimKey .Values.postfixRelay.defaultOutboundRelay.dkimFilter }}
+  {{- if eq (include "postfix.dkimActive" .) "true" }}
+    {{- if and .Values.postfixRelay.defaultOutboundRelay.dkimDomain .Values.postfixRelay.defaultOutboundRelay.dkimSelector .Values.postfixRelay.defaultOutboundRelay.dkimKey .Values.postfixRelay.defaultOutboundRelay.dkimFilter }}
   POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_DKIM_KEY: {{ .Values.postfixRelay.defaultOutboundRelay.dkimKey | b64enc | b64enc }}
+    {{- end }}
   {{- end }}
-{{- end }}
-{{- if or (eq .Values.postfixRelay.inboundTls "may") (eq .Values.postfixRelay.inboundTls "encrypt") }}
+  {{- if or (eq .Values.postfixRelay.inboundTls "may") (eq .Values.postfixRelay.inboundTls "encrypt") }}
   POSTFIX_RELAY_INBOUND_TLS_KEY: {{ .Values.postfixRelay.inboundTlsKey | b64enc | b64enc }}
-{{- end }}
-{{- if .Values.postfixRelay.additionalOutBoundRelay }}
-  {{- range $i, $s := .Values.postfixRelay.additionalOutBoundRelay }}
+  {{- end }}
+  {{- if .Values.postfixRelay.additionalOutBoundRelay }}
+    {{- range $i, $s := .Values.postfixRelay.additionalOutBoundRelay }}
   POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_PASSWORD: {{ $s.password | b64enc }}
-    {{- if eq (include "postfix.dkimActive" $) "true" }}
-      {{- if and $s.dkimDomain $s.dkimSelector $s.dkimKey $s.dkimFilter }}
+      {{- if eq (include "postfix.dkimActive" $) "true" }}
+        {{- if and $s.dkimDomain $s.dkimSelector $s.dkimKey $s.dkimFilter }}
   POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_DKIM_KEY: {{ $s.dkimKey | b64enc | b64enc }}
+        {{- end }}
       {{- end }}
     {{- end }}
   {{- end }}
