--- a/helm/postfix-relay/values.yaml
+++ b/helm/postfix-relay/values.yaml
@@ -132,7 +132,7 @@ postfixRelay:
   csi:
     enabled: false
     #provider: vault
-    #address: http://vault.secret-management.svc.cluster.local:8200
+    #address: http://vault:8200
 
 nodeSelector: {}
 
