Added fix, that the dkim key isn't set in values, when csi is enabled Changes to be committed: modified:   helm/postfix-relay/templates/_helpers.tpl modified:   helm/postfix-relay/templates/secret-provider-class.yaml

--- a/helm/postfix-relay/templates/secret-provider-class.yaml
+++ b/helm/postfix-relay/templates/secret-provider-class.yaml
@@ -19,7 +19,7 @@ spec:
         secretPath: "{{ .Release.Namespace | default "default" }}/data/postfixRelay"
         secretKey: "POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_PASSWORD"
       {{- if eq (include "postfix.dkimActive" .) "true" }}
-        {{- if and .Values.postfixRelay.defaultOutboundRelay.dkimDomain .Values.postfixRelay.defaultOutboundRelay.dkimSelector .Values.postfixRelay.defaultOutboundRelay.dkimKey .Values.postfixRelay.defaultOutboundRelay.dkimFilter }}
+        {{- if and .Values.postfixRelay.defaultOutboundRelay.dkimDomain .Values.postfixRelay.defaultOutboundRelay.dkimSelector .Values.postfixRelay.defaultOutboundRelay.dkimFilter }}
       - objectName: "POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_DKIM_KEY"
         secretPath: "{{ .Release.Namespace | default "default" }}/data/postfixRelay"
         secretKey: "POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_DKIM_KEY"
@@ -36,7 +36,7 @@ spec:
         secretPath: "{{ $.Release.Namespace | default "default" }}/data/postfixRelay"
         secretKey: "POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_PASSWORD"
           {{- if eq (include "postfix.dkimActive" $) "true" }}
-            {{- if and $s.dkimDomain $s.dkimSelector $s.dkimKey $s.dkimFilter }}
+            {{- if and $s.dkimDomain $s.dkimSelector $s.dkimFilter }}
       - objectName: "POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_DKIM_KEY"
         secretPath: "{{ $.Release.Namespace | default "default" }}/data/postfixRelay"
         secretKey: "POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_DKIM_KEY"
@@ -51,7 +51,7 @@ spec:
         - objectName: "POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_PASSWORD"
           key: "POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_PASSWORD"
     {{- if eq (include "postfix.dkimActive" .) "true" }}
-      {{- if and .Values.postfixRelay.defaultOutboundRelay.dkimDomain .Values.postfixRelay.defaultOutboundRelay.dkimSelector .Values.postfixRelay.defaultOutboundRelay.dkimKey .Values.postfixRelay.defaultOutboundRelay.dkimFilter }}
+      {{- if and .Values.postfixRelay.defaultOutboundRelay.dkimDomain .Values.postfixRelay.defaultOutboundRelay.dkimSelector .Values.postfixRelay.defaultOutboundRelay.dkimFilter }}
         - objectName: "POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_DKIM_KEY"
           key: "POSTFIX_RELAY_DEFAULT_OUTBOUND_RELAY_DKIM_KEY"
       {{- end }}
@@ -65,7 +65,7 @@ spec:
         - objectName: "POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_PASSWORD"
           key: "POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_PASSWORD"
         {{- if eq (include "postfix.dkimActive" $) "true" }}
-          {{- if and $s.dkimDomain $s.dkimSelector $s.dkimKey $s.dkimFilter }}
+          {{- if and $s.dkimDomain $s.dkimSelector $s.dkimFilter }}
         - objectName: "POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_DKIM_KEY"
           key: "POSTFIX_RELAY_ADDITIONAL_OUTBOUND_RELAY_{{ $i }}_DKIM_KEY"
           {{- end }}
