Added initial commit On branch feature/add-recipient-dependend-routing-to-chart Changes to be committed: new file:   .env-05-simple-mailrelay-transport.dist renamed:    .env-05-simple-mailrelay-inbound-outbound-tls-sender-based-routing-dkim.dist -> .env-06-simple-mailrelay-inbound-outbound-tls-sender-based-routing-dkim.dist modified:   README.md modified:   docker/postfix/rootfs/entrypoint.sh modified:   helm/postfix-relay/templates/configmap.yaml modified:   helm/postfix-relay/values.yaml new file:   helm/values-05-simple-mailrelay-transport.yaml.dist renamed:    helm/values-05-sender-based-routing-inbound-outbound-tls-dkim.yaml.dist -> helm/values-06-sender-based-routing-inbound-outbound-tls-dkim.yaml.dist

--- a/helm/postfix-relay/templates/configmap.yaml
+++ b/helm/postfix-relay/templates/configmap.yaml
@@ -61,3 +61,9 @@ data:
   POSTFIX_RELAY_DKIM_TRUSTED_HOSTS: {{ .Values.postfixRelay.dkimTrustedHosts | quote }}
   {{- end }}
 {{- end }}
+{{- if .Values.postfixRelay.transport }}
+  {{- range $i, $s := .Values.postfixRelay.transport }}
+  POSTFIX_RELAY_TRANSPORT_{{ $i }}_PATTERN: {{ $s.pattern | quote }}
+  POSTFIX_RELAY_TRANSPORT_{{ $i }}_TARGET: {{ $s.target | quote }}
+  {{- end }}
+{{- end }}
